feat: Integrated Mail Services
Created Local & Cloud mail services classes
Created IMailServices interface
Implemented importing the mail details from appsettings.json

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning",
       "CityInfo.Controllers": "Information"
     }
+  },
+  "mailSettings": {
+    "mailToAddress": "admin@compnay.com",
+    "mailFromAddress" :  "noreply@company.com"
+  },
+  "ConnectionStrings": {
+    "CityInfoDBConnectionString": "Data Source=CityInfo.db"
   }
 }
