feat: DB implemented, added AutoMapper for mapping DTO's

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "mailSettings": {
+    "mailToAddress": "developer@compnay.com",
+    "mailFromAddress": "noreply@company.com"
+  },
+  "ConnectionStrings": {
+    "CityInfoDBConnectionString": "Data Source=CityInfo.db"
+  },
   "AllowedHosts": "*"
 }
